<resources>
    <string name="app_name">Quiz App</string>
    <string name="main_true">True</string>
    <string name="main_false">False</string>
    <string name="main_score">Score: %1$d</string>
    <string name="main_question">Question</string>
    <string name="main_finalScore">Text View</string>
    <string name="main_restart">Restart</string>
    <string name="main_shuffle">Shuffle</string>
    <string name="main_quizCompleted">Quiz Completed Final Score: %1$d / 10</string>
</resources>